--- a/css/style.css
+++ b/css/style.css
@@ -5,11 +5,11 @@
 @keyframes fly {
   50% {
     margin-top: -7px; } }
-@-webkit-keyframes text {
+@-webkit-keyframes btn-shadow {
   50% {
     -webkit-transform: scale(0.8);
             transform: scale(0.8); } }
-@keyframes text {
+@keyframes btn-shadow {
   50% {
     -webkit-transform: scale(0.8);
             transform: scale(0.8); } }
@@ -347,7 +347,9 @@ a:hover, a:active {
   text-shadow: 0px 1px 0px #f9c87a;
   background: #f5a322;
   background-image: -webkit-linear-gradient(90deg, #f5a322 0%, gold 100%);
-  box-shadow: 0px 7px 0px 0px rgba(131, 98, 36, 0.004), inset 0px 1px 0px 0px rgba(255, 255, 255, 0.4); }
+  box-shadow: 0px 7px 0px 0px rgba(131, 98, 36, 0.004), inset 0px 1px 0px 0px rgba(255, 255, 255, 0.4);
+  -webkit-transition: all 0.5s ease;
+          transition: all 0.5s ease; }
   .play-btn:hover {
     background: gold;
     background-image: -webkit-linear-gradient(90deg, gold 0%, gold 100%); }
@@ -486,8 +488,8 @@ a:hover, a:active {
       background-size: cover;
       width: 270px;
       height: 50px;
-      -webkit-animation: text 3.5s infinite;
-              animation: text 3.5s infinite;
+      -webkit-animation: btn-shadow 3.5s infinite;
+              animation: btn-shadow 3.5s infinite;
       -webkit-animation-timing-function: linear;
               animation-timing-function: linear;
       bottom: -60px;
@@ -663,7 +665,8 @@ a:hover, a:active {
             justify-content: space-around;
     -webkit-flex-wrap: wrap;
         -ms-flex-wrap: wrap;
-            flex-wrap: wrap; }
+            flex-wrap: wrap;
+    padding: 30px 0; }
   .benefits .benefit {
     max-width: 100px;
     -webkit-box-flex: 1;
@@ -687,48 +690,52 @@ a:hover, a:active {
             -ms-transform: scaleX(-1);
                 transform: scaleX(-1); }
 
-.bottom-btn {
-  margin: 30px 0; }
-  .bottom-btn .button {
-    width: 210px;
-    font-size: 28px;
-    border: 1px solid #f9c87a;
-    box-shadow: 0px 8px 1px -4px rgba(131, 98, 36, 0.75);
-    position: relative;
-    -webkit-transition: all 0.5s linear;
-            transition: all 0.5s linear; }
-    .bottom-btn .button::after {
-      content: "";
-      position: absolute;
-      background-image: url(../img/btn-shadow-white.png);
-      background-size: 100% 100%;
-      width: 230px;
-      height: 50px;
-      bottom: -55px;
-      left: 0;
-      -webkit-transition: all 0.5s linear;
-              transition: all 0.5s linear; }
-    .bottom-btn .button:hover {
-      margin-top: -3px; }
-      .bottom-btn .button:hover::after {
-        -webkit-filter: brightness(150%);
-                filter: brightness(150%);
-        bottom: -58px; }
+.bottom-btn .button {
+  width: 210px;
+  font-size: 28px;
+  border: 1px solid #f9c87a;
+  box-shadow: 0px 8px 1px -4px rgba(131, 98, 36, 0.75);
+  position: relative; }
+  .bottom-btn .button:hover {
+    bottom: 1px; }
+    .bottom-btn .button:hover::after {
+      -webkit-filter: brightness(150%);
+              filter: brightness(150%);
+      bottom: -41px; }
+  .bottom-btn .button::after {
+    content: "";
+    position: absolute;
+    background-image: url(../img/btn-shadow-white.png);
+    background-size: 100% 100%;
+    width: 230px;
+    height: 35px;
+    bottom: -40px;
+    left: 0;
+    -webkit-transition: 0.5s linear;
+            transition: 0.5s linear; }
 
 .partners {
   -webkit-flex-wrap: wrap;
       -ms-flex-wrap: wrap;
           flex-wrap: wrap;
-  margin: 50px; }
+  margin: 70px 50px 20px; }
   .partners .partner {
-    width: 50px;
-    max-width: 50px;
+    width: 60px;
+    max-width: 60px;
     height: 50px;
     margin: 3px;
     -webkit-box-flex: 1;
-    -webkit-flex: 1 1 45px;
-        -ms-flex: 1 1 45px;
-            flex: 1 1 45px; }
+    -webkit-flex: 1 1 50px;
+        -ms-flex: 1 1 50px;
+            flex: 1 1 50px;
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+    -webkit-align-items: center;
+        -ms-flex-align: center;
+            align-items: center; }
     .partners .partner img {
       max-width: 100%; }
 
