--- a/css/style.sass
+++ b/css/style.sass
@@ -43,6 +43,7 @@ a:hover, a:active
   background-image: -webkit-linear-gradient( 90deg, $orange 0%, $yellow 100%)
   background-image: -ms-linear-gradient( 90deg, $orange 0%, $yellow 100%)
   box-shadow: 0px 7px 0px 0px rgba(131, 98, 36, 0.004),inset 0px 1px 0px 0px rgba(255, 255, 255, 0.4)
+  transition: all 0.5s ease
   &:hover
     background: $yellow
     background-image: -moz-linear-gradient( 90deg, $yellow  0%, $yellow 100%)
@@ -172,7 +173,7 @@ a:hover, a:active
         background-size: cover
         width: 270px
         height: 50px
-        animation: text 3.5s infinite
+        animation: btn-shadow 3.5s infinite
         animation-timing-function: linear
         bottom: -60px
         left: 0
@@ -336,6 +337,7 @@ a:hover, a:active
   &-content
     justify-content: space-around
     flex-wrap: wrap
+    padding: 30px 0
   .benefit
     max-width: 100px
     flex: 1 1 110px
@@ -354,42 +356,43 @@ a:hover, a:active
         transform: scaleX(-1)
 
 .bottom-btn
-  margin: 30px 0
   .button
     width: 210px
     font-size: 28px
     border: 1px solid $lightBrown
     box-shadow: 0px 8px 1px -4px rgba($brown, 0.75)
     position: relative
-    transition: all 0.5s linear
+    &:hover
+      bottom: 1px
+      &::after
+        filter: brightness(150%)
+        bottom: -41px
     &::after
       content: ''
       position: absolute
       background-image: url(../img/btn-shadow-white.png)
       background-size: 100% 100%
       width: 230px
-      height: 50px
-      bottom: -55px
+      height: 35px
+      bottom: -40px
       left: 0
-      transition: all 0.5s linear
-    &:hover
-      margin-top: -3px
-      &::after
-        filter: brightness(150%)
-        bottom: -58px
+      transition: 0.5s linear
+
 
 .partners
   flex-wrap: wrap
-  margin: 50px
+  margin: 70px 50px 20px
   .partner
-    width: 50px
-    max-width: 50px
+    width: 60px
+    max-width: 60px
     height: 50px
     margin: 3px
-    flex: 1 1 45px
+    flex: 1 1 50px
+    display: flex
+    align-items: center
     img
       max-width: 100%
-  
+
 
 
 
